[package]
name = "kittethnetwork-miner"
version = "0.1.0"
edition = "2021"
description = "Kitteth Network, simple AstroBWT Miner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size
opt-level = 3
# Increase Compile Time For Smaller Size             
# codegen-units = 1

[dependencies]
sha3 = "0.9.1"
rand = "0.8.4"
futures = "0.3"
